still no working tx.  Variety of messages encountered mean it is time to implement a proper message learning technique
