# apps/tapcap-supplier/Server/Server/TapCapSupplier.Server/Program.cs
@@ -52,6 +52,6 @@ namespace TapCapSupplier.Server
 					logging.SetMinimumLevel(Microsoft.Extensions.Logging.LogLevel.Trace);
 				})
 				.UseNLog()  // NLog: setup NLog for Dependency injection
-				.UseUrls("http://0.0.0.0:8070/");
+                .UseUrls("http://0.0.0.0:9361/");
 	}
 }
