# apps/tapcap-supplier/Server/Server/TapCapSupplier.Server/wwwroot/openapi-original.json
@@ -13,7 +13,7 @@
     "version" : "0.1.0"
   },
   "servers" : [ {
-    "url" : "http://localhost:8070/"
+    "url" : "https://thecoincad.tplinkdns.com:9361/"
   } ],
   "tags" : [ {
     "name" : "Transaction",
@@ -189,7 +189,7 @@
         }
       },
       "TapCapToken" : {
-        "required" : [ "availableBalance", "clientAccount", "timestamp", "transactionId" ],
+        "required" : [ "availableBalance", "clientAccount", "nonce", "timestamp" ],
         "type" : "object",
         "properties" : {
           "clientAccount" : {
@@ -199,7 +199,7 @@
             "type" : "integer",
             "format" : "int64"
           },
-          "transactionId" : {
+          "nonce" : {
             "type" : "integer"
           },
           "timestamp" : {
